Fix content overflow on phone.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,9 @@
 html {
   background-color: #282c34;
-  min-height: 100vh;
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
