--- a/client/src/assets/styles/Home.css
+++ b/client/src/assets/styles/Home.css
@@ -2,7 +2,7 @@
   background: linear-gradient(rgba(15, 23, 43, 0.9), rgba(15, 23, 43, 0.9)),
     url("../images/bg-hero.jpg");
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -92,12 +92,5 @@
   .hero-img {
     width: 15rem;
     height: 15rem;
-  }
-}
-
-/* no image for you >:( */
-@media (max-width: 615px) {
-  .hero-img {
-    display: none;
   }
 }
